@@ -187,10 +187,10 @@ public class PrincipalName implements Cloneable {
     }
 
     private static final long NAME_STRINGS_OFFSET;
-    private static final sun.misc.Unsafe UNSAFE;
+    private static final jdk.internal.misc.Unsafe UNSAFE;
     static {
         try {
-            sun.misc.Unsafe unsafe = sun.misc.Unsafe.getUnsafe();
+            jdk.internal.misc.Unsafe unsafe = jdk.internal.misc.Unsafe.getUnsafe();
             NAME_STRINGS_OFFSET = unsafe.objectFieldOffset(
                     PrincipalName.class.getDeclaredField("nameStrings"));
             UNSAFE = unsafe;
